Bug 841812 - Avoid crashing when changing attributes on an invalidly parented <textPath>. r=roc